--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href='./src/assets/Tmdblogo.png' />
+    <link rel="icon" href='./src/assets/Tmdblogo.png' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JC MOVIE DB</title>
     <meta name="author" content="John Córdova jcdevs"/>
   </head>
   <body>
-    <main id="root"></main>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
   </body>
 </html>
